added user schema and blog schema to the models and now both models work alongside the routes

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,17 @@
     <textarea type="text" name="blogpost" placeholder="enter your blog here"></textarea>
     <br>
     <input type="submit">
-
   </form>
+
+  <h2>This is to make users</h2>
+
+    <form method="POST" action="/users">
+    <input type="text" name="username" placeholder="username">
+    <br>
+    <input type="password" name="password" placeholder="password">
+    <br>
+    <input type="submit">
+  </form>
+
 </body>
 </html>
